# piper-phonemize

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  pyproject.toml  setup.py
.github/workflows/: wheels.yml
