[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.macos]
before-all = "uname -a"

[tool.cibuildwheel.linux]
before-all = "uname -a && make clean && make"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_28_aarch64:latest"
manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64:latest"

[tool.cibuildwheel.macos.environment]
CPPFLAGS = "-I$(pwd)/install/include/piper-phonemize -I$(pwd)/install/include -L$(pwd)/install/lib -L$(pwd)/install/lib64"
LIBRARY_PATH = "$(pwd)/install/lib:$(pwd)/install/lib64"
DYLD_LIBRARY_PATH = "$(pwd)/install/lib:$(pwd)/install/lib64"
LD_LIBRARY_PATH = "$(pwd)/install/lib:$(pwd)/install/lib64"
RUNPATH = "$(pwd)/install/lib:$(pwd)/install/lib64"

[tool.cibuildwheel.linux.environment]
CPPFLAGS = "-I/project/install/include/piper-phonemize -I/project/install/include -L/project/install/lib -L/project/install/lib64"
LIBRARY_PATH = "/project/install/lib:/project/install/lib64"
DYLD_LIBRARY_PATH = "/project/install/lib:/project/install/lib64"
LD_LIBRARY_PATH = "/project/install/lib:/project/install/lib64"
RUNPATH = "/project/install/lib:/project/install/lib64"
